fixed footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@ nav a {
 	padding-right:10px;
 	padding-bottom:10px;"
 }
+
+.footer-icon-ul {
+  padding-top: 20px;
+}
 .hover:hover{
   cursor:pointer;
 
